sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:11: error: ')' expected but '}' found.
    }
    ^