sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0 to getNombreValeurs()-2){
    var n=getValeur(i)
    var o=i
    for(j<- i to getNombreValeurs()-1){
      if (plusPetit(j,i){
        n=getValeur(j)
        o=j
      }
    }
    echange(i,o)
  }
}